test/corpus/recipe_bodies.txt
===
Recipes: Empty body
===

r:

---

(file
  (recipe
    (identifier)))

===
Recipes: single line body
===

r:
    echo

r:
	echo

r:
  echo

---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line)))
  (recipe
    (identifier)
    (recipe_body
      (recipe_line)))
  (recipe
    (identifier)
    (recipe_body
      (recipe_line))))

===
Recipes: multiline
===

r:
	echo
  echo
    echo

---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line)
      (recipe_line)
      (recipe_line))))

===
Recipes: prefixed
===

r:
    -?@echo
    -?echo
    -@?echo
    -@echo
    -echo
    ?-@echo
    ?-echo
    ?@-echo
    ?@echo
    @-?echo
    @-echo
    @?-echo
    @?echo
    @echo


---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line))))

===
Recipes: interpolation
===

r:
  exec {{ command }} --static-arg {{ args + other_args }} --end-arg


---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line
        (interpolation
          (expression
            (value
              (identifier))))
        (interpolation
          (expression
            (value
              (identifier))
            (expression
              (value
                (identifier)))))))))

===
Recipes: espace interpolation
===

r:
  echo {{{{ hello }}

---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line))))

===
Recipes: with backslash-continuation
===

r:
  line \
    --with args \
    over \
    multiple lines
  and another \
    command \
    that does \
    --the same

---

(file
  (recipe
    (identifier)
    (recipe_body
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line)
      (recipe_line))))
