test/corpus/settings.txt
===
allow-duplicate-recipes
===

set allow-duplicate-recipes
set allow-duplicate-recipes := true
set allow-duplicate-recipes := false

---

(file
  (setting)
  (setting
    (boolean))
  (setting
    (boolean)))

===
allow-duplicate-variables
===

set allow-duplicate-variables
set allow-duplicate-variables := true
set allow-duplicate-variables := false

---

(file
  (setting)
  (setting
    (boolean))
  (setting
    (boolean)))

===
dotenv-filename
===

set dotenv-filename := ".my-custom-env"
set dotenv-filename := '.my-custom-env'

---

(file
  (setting
    (string
      (normal_string)))
  (setting
    (string
      (raw_string))))
